flux/infrastructure/base/metrics-server/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-server
spec:
  description: allow metrics-server to nodes and kube-apiserver
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: metrics-server
      k8s:io.kubernetes.pod.namespace: kube-system
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "6443"
              protocol: TCP
